--- a/app/static/style.css
+++ b/app/static/style.css
@@ -106,10 +106,10 @@ label.formControl + * {
 
 .appHeader .userPerms {
   text-align: right;
-  font-size: 14px;
+  font-size: 11px;
   padding: 0 10px;
   opacity: 0.8;
-  max-width: 500px;
+  max-width: 400px;
 }
 
 .mainLoggedOut {
@@ -223,4 +223,37 @@ label.formControl + * {
 
 .detailView h2 .btn {
   margin-left: 10px;
+}
+
+@media screen and (max-width: 1100px) {
+  .appHeader {
+    position: relative;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .appHeader h1 {
+    margin: 0;
+    flex: 0 0 100%;
+    text-align: center;
+  }
+
+  .appHeader .userPerms {
+    margin-top: 30px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  .appHeader .btn {
+    position: absolute;
+    right: 30px;
+    top: 40px;
+  }
+
+  .mainLists {
+    flex-direction: column;
+    align-items: stretch;
+  }
 }
